--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -57,7 +57,7 @@
 :CUSTOM_ID: yr2024
 :END:
 
-[54]. *Santoro Maurizio, Oliver Cartus, Shaun Quegan, Heather Kay, Richard M. Lucas, Arnan Araza, Martin Herold, Nicolas Labrière, Jêrome Chave, Ake Rosenqvist, Takeo Tadono, Kazufumi Kobayashi, Josef Kellndorfer0, Valerio Avitabile, Hugh Brown, João Carreiras, Michael J. Campbell, Jura Cavlovic, Polyanna da Conceição Bispo, Hammad Gilani, Amit Kumar,0, Simon L. Lewis, Jingjing Liang0, Edward T.A. Mitchard, Ana María Pacheco-Pascagaza, Oliver L. Phillips, Casey M. Ryan, Dmitry Schepaschenko, Hansrajie Sukhdeo, Hans Verbeeck, Ghislain Vieilledent, Arief Wijaya, Simon Willcock, Frank Martin Seifert* Design and performance of the Climate Change Initiative Biomass global retrieval algorithm. /Science of Remote Sensing/. *10*:100169. {{{doi(10.1016/j.srs.2024.100169)}}}. {{{pdf(Santoro2024-SRS.pdf)}}}, Supplementary materials {{{supp(Santoro2024-SRS-SM.pdf)}}} {{{altm(10.1016/j.srs.2024.100169)}}}
+[54]. *Santoro M., O. Cartus, S. Quegan, H. Kay, R. M. Lucas, A. Araza, M. Herold, N. Labrière, J. Chave, A. Rosenqvist, T. Tadono, K. Kobayashi, J. Kellndorfer, V. Avitabile, H. Brown, J. Carreiras, M.J. Campbell, J. Cavlovic, P. da Conceição Bispo, H. Gilani, M. L. Khan, A. Kumar, S. L. Lewis, J. Liang, E. T. A. Mitchard, A. M. Pacheco-Pascagaza, O. L. Phillips, C. M. Ryan, P. Saikia, D. Schepaschenko, H. Sukhdeo, H. Verbeeck, G. Vieilledent, A. Wijaya, S. Willcock, F. M. Seifert* Design and performance of the Climate Change Initiative Biomass global retrieval algorithm. /Science of Remote Sensing/. *10*:100169. {{{doi(10.1016/j.srs.2024.100169)}}}. {{{pdf(Santoro2024-SRS.pdf)}}}, Supplementary materials {{{supp(Santoro2024-SRS-SM.pdf)}}} {{{altm(10.1016/j.srs.2024.100169)}}}
 
 [53]. *Bourgoin C., G. Ceccherini, M. Girardello, C. Vancutsem, V. Avitabile, P.S.A. Beck, R. Beuchle, L. Blanc, G. Duveiller, M. Migliavacca, G. Vieilledent, A. Cescatti, and F. Achard.* 2024. Human degradation of tropical moist forests is greater than previously estimated. /Nature/. *631*:8021, 570--576. {{{doi(10.1038/s41586-024-07629-0)}}}. {{{pdf(Bourgoin2024-Nature.pdf)}}}, Supplementary materials {{{supp(Bourgoin2024-Nature-SM.pdf)}}} {{{altm(10.1038/s41586-024-07629-0)}}}
 
