--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -63,7 +63,7 @@
 
 [52]. *Neugarten R. A., R. A. Rasolofoson, C. B. Barrett, G. Vieilledent, and A. D. Rodewald.* 2024. The effect of a political crisis on performance of community forests and protected areas in Madagascar. /Nature Communications/. *15*:2863. {{{doi(10.1038/s41467-024-47318-0)}}}. {{{pdf(Neugarten2024-NatureCommunications.pdf)}}}, Supplementary materials {{{supp(Neugarten2024-NatureCommunications-SM.pdf)}}} {{{altm(10.1038/s41467-024-47318-0)}}}
 
-[51]. *Yang H., S. Wang, R. Son, H. Lee, V. Benson, W. Zhang, Ya. Zhang, Yu. Zang, J. Kattge, G. Boenisch, D. Schepaschenko, Z. Karaszewski, K. Stereńczak, Á. Moreno-Martínez, C. Nabais, P. Birnbaum, G. Vieilledent, U. Weber, and N. Carvalhais.* 2024. Global patterns of tree wood density. /Global Change Biology/. *30*:e17224. {{{doi(10.1111/gcb.17224)}}}. {{{pdf(Yang2024-GCB.pdf)}}}, Supplementary materials {{{supp(Yang2024-GCB-SM.pdf)}}} {{{altm(10.1111/gcb.17224)}}}
+[51]. *Yang H., S. Wang, R. Son, H. Lee, V. Benson, W. Zhang, Ya. Zhang, Yu. Zhang, J. Kattge, G. Boenisch, D. Schepaschenko, Z. Karaszewski, K. Stereńczak, Á. Moreno-Martínez, C. Nabais, P. Birnbaum, G. Vieilledent, U. Weber, and N. Carvalhais.* 2024. Global patterns of tree wood density. /Global Change Biology/. *30*:e17224. {{{doi(10.1111/gcb.17224)}}}. {{{pdf(Yang2024-GCB.pdf)}}}, Supplementary materials {{{supp(Yang2024-GCB-SM.pdf)}}} {{{altm(10.1111/gcb.17224)}}}
 
 [50]. *Girard-Tercieux C., G. Vieilledent, A. T. Clark, J. S. Clark, B. Courbaud, C. Fortunel, G. Kunstler, R. Pélissier, N. Rüger, and I. Maréchaux.* 2024. Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure. /Peer Community Journal/, section Ecology. *4*:e28. {{{doi(10.24072/pcjournal.360)}}} /bioRxiv/: [[doi:10.1101/2022.08.06.503032][503032]]. {{{pdf(Girard-Tercieux2024-PCJournal.pdf)}}}, Supplementary materials {{{supp(Girard-Tercieux2024-PCJournal-SM.pdf)}}} {{{altm(10.24072/pcjournal.360)}}}
 
