--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -57,13 +57,13 @@
 :CUSTOM_ID: yr2024
 :END:
 
-[54]. *Santoro M., O. Cartus, S. Quegan, H. Kay, R. M. Lucas, A. Araza, M. Herold, N. Labrière, J. Chave, A. Rosenqvist, T. Tadono, K. Kobayashi, J. Kellndorfer, V. Avitabile, H. Brown, J. Carreiras, M.J. Campbell, J. Cavlovic, P. da Conceição Bispo, H. Gilani, M. L. Khan, A. Kumar, S. L. Lewis, J. Liang, E. T. A. Mitchard, A. M. Pacheco-Pascagaza, O. L. Phillips, C. M. Ryan, P. Saikia, D. Schepaschenko, H. Sukhdeo, H. Verbeeck, G. Vieilledent, A. Wijaya, S. Willcock, F. M. Seifert*. 2024. Design and performance of the Climate Change Initiative Biomass global retrieval algorithm. /Science of Remote Sensing/. *10*:100169. {{{doi(10.1016/j.srs.2024.100169)}}}. {{{pdf(Santoro2024-SRS.pdf)}}}, Supplementary materials {{{supp(Santoro2024-SRS-SM.pdf)}}} {{{altm(10.1016/j.srs.2024.100169)}}}
+[54]. *Santoro M., O. Cartus, S. Quegan, H. Kay, R. M. Lucas, A. Araza, M. Herold, N. Labrière, J. Chave, A. Rosenqvist, T. Tadono, K. Kobayashi, J. Kellndorfer, V. Avitabile, H. Brown, J. Carreiras, M.J. Campbell, J. Cavlovic, P. da Conceição Bispo, H. Gilani, M. L. Khan, A. Kumar, S. L. Lewis, J. Liang, E. T. A. Mitchard, A. M. Pacheco-Pascagaza, O. L. Phillips, C. M. Ryan, P. Saikia, D. Schepaschenko, H. Sukhdeo, H. Verbeeck, G. Vieilledent, A. Wijaya, S. Willcock, and F. M. Seifert.* 2024. Design and performance of the Climate Change Initiative Biomass global retrieval algorithm. /Science of Remote Sensing/. *10*:100169. {{{doi(10.1016/j.srs.2024.100169)}}}. {{{pdf(Santoro2024-SRS.pdf)}}}, Supplementary materials {{{supp(Santoro2024-SRS-SM.pdf)}}} {{{altm(10.1016/j.srs.2024.100169)}}}
 
 [53]. *Bourgoin C., G. Ceccherini, M. Girardello, C. Vancutsem, V. Avitabile, P.S.A. Beck, R. Beuchle, L. Blanc, G. Duveiller, M. Migliavacca, G. Vieilledent, A. Cescatti, and F. Achard.* 2024. Human degradation of tropical moist forests is greater than previously estimated. /Nature/. *631*:8021, 570--576. {{{doi(10.1038/s41586-024-07629-0)}}}. {{{pdf(Bourgoin2024-Nature.pdf)}}}, Supplementary materials {{{supp(Bourgoin2024-Nature-SM.pdf)}}} {{{altm(10.1038/s41586-024-07629-0)}}}
 
-[52]. *Neugarten R. A., R. A. Rasolofoson, C. B. Barrett, G. Vieilledent, and A. D. Rodewald*. 2024. The effect of a political crisis on performance of community forests and protected areas in Madagascar. /Nature Communications/. *15*:2863. {{{doi(10.1038/s41467-024-47318-0)}}}. {{{pdf(Neugarten2024-NatureCommunications.pdf)}}}, Supplementary materials {{{supp(Neugarten2024-NatureCommunications-SM.pdf)}}} {{{altm(10.1038/s41467-024-47318-0)}}}
+[52]. *Neugarten R. A., R. A. Rasolofoson, C. B. Barrett, G. Vieilledent, and A. D. Rodewald.* 2024. The effect of a political crisis on performance of community forests and protected areas in Madagascar. /Nature Communications/. *15*:2863. {{{doi(10.1038/s41467-024-47318-0)}}}. {{{pdf(Neugarten2024-NatureCommunications.pdf)}}}, Supplementary materials {{{supp(Neugarten2024-NatureCommunications-SM.pdf)}}} {{{altm(10.1038/s41467-024-47318-0)}}}
 
-[51]. *Yang, H., Wang, S., Son, R., Lee, H., Benson, V., Zhang, W., Zhang, Y., Zhang, Y., Kattge, J., Boenisch, G., Schepaschenko, D., Karaszewski, Z., Stereńczak, K., Moreno-­Martínez, Á., Nabais, C., Birnbaum, P., Vieilledent, G., Weber, U., and Carvalhais, N.* 2024. Global patterns of tree wood density. /Global Change Biology/. *30*:e17224. {{{doi(10.1111/gcb.17224)}}}. {{{pdf(Yang2024-GCB.pdf)}}}, Supplementary materials {{{supp(Yang2024-GCB-SM.pdf)}}} {{{altm(10.1111/gcb.17224)}}}
+[51]. *Yang H., S. Wang, R. Son, H. Lee, V. Benson, W. Zhang, Ya. Zhang, Yu. Zang, J. Kattge, G. Boenisch, D. Schepaschenko, Z. Karaszewski, K. Stereńczak, Á. Moreno-Martínez, C. Nabais, P. Birnbaum, G. Vieilledent, U. Weber, and N. Carvalhais.* 2024. Global patterns of tree wood density. /Global Change Biology/. *30*:e17224. {{{doi(10.1111/gcb.17224)}}}. {{{pdf(Yang2024-GCB.pdf)}}}, Supplementary materials {{{supp(Yang2024-GCB-SM.pdf)}}} {{{altm(10.1111/gcb.17224)}}}
 
 [50]. *Girard-Tercieux C., G. Vieilledent, A. T. Clark, J. S. Clark, B. Courbaud, C. Fortunel, G. Kunstler, R. Pélissier, N. Rüger, and I. Maréchaux.* 2024. Beyond variance: simple random distributions are not a good proxy for intraspecific variability in systems with environmental structure. /Peer Community Journal/, section Ecology. *4*:e28. {{{doi(10.24072/pcjournal.360)}}} /bioRxiv/: [[doi:10.1101/2022.08.06.503032][503032]]. {{{pdf(Girard-Tercieux2024-PCJournal.pdf)}}}, Supplementary materials {{{supp(Girard-Tercieux2024-PCJournal-SM.pdf)}}} {{{altm(10.24072/pcjournal.360)}}}
 
